--- a/media-queries.css
+++ b/media-queries.css
@@ -81,10 +81,165 @@ nav .fa-solid {
     #intro-role {
         font-size: 20px;
     }
+
+}
+
+
+/* trial hero-section */
+
+@media (max-width: 650px) {
     .hero-section-intro {
+        height: 60vh;
         flex-direction: column;
     }
+
+    .self-intro-content {
+        top: 1.1rem;
+        right: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    #self-image-frame {
+        position: relative;
+        margin: auto;
+        display: block;
+        top: 0;
+    }
+
+    #self-image-frame {
+        height: 200px;
+    }
+
+    .headshot-image {
+        height: 250px;
+    }
+
+    .self-intro {
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 1;
+    }
+
+    .self-image-section {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 2;
+    }
 }
+
+/* trial About section */
+
+@media (max-width: 650px) {
+    #about-section {
+        height: 125vh;  
+        padding-top: 0;
+        margin-top: -0.8rem;
+    }
+
+    .section-container {
+        flex-direction: column;
+        gap: 0;
+        margin-top: -2.95rem;
+    }
+
+    .section-pic-container img {
+        position: relative;
+        margin: auto;
+        display: block;
+        height: 400px;
+        top: 0;
+    }
+
+    .about-container {
+        margin-bottom: 2rem;
+        margin-top: 4rem;
+    }
+}
+
+
+/* Contact section */
+
+@media (max-width: 850px) {
+    .contact-form-container {
+        grid-template-columns: 1fr;
+    }
+
+    .contact-info:before {
+        bottom: initial;
+        top: -75px;
+        right: 65px;
+        transform: scale(0.95);
+    }
+
+    .contact-form:before {
+        top: -13px;
+        left: initial;
+        right: 70px;
+    }
+
+    .square {
+        transform: translate(140%, 43%);
+        height: 350px;
+    }
+
+    .text {
+        margin: 1rem 0 1.5rem 0;
+    }
+
+    .social-media {
+        padding: 1.5rem 0 0 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .contact-container {
+        padding: 1.5rem;
+    }
+
+    .contact-info::before {
+        display: none;
+    }
+
+    form, .conact-info {
+        padding: 1.7rem 1.6rem;
+    }
+
+    .text, .information, .social-media p {
+        font-size: 0.8rem;
+    }
+
+    .title {
+        font-size: 1.15rem;
+    }
+
+    .social-icons a {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+    }
+
+    .contact-icon {
+        width: 23px;
+    }
+
+    .input-container {
+        padding: 0.45rem 1.2rem;
+    }
+
+    .contact-submit-btn {
+        padding: 0.45rem 1.2rem;
+    }
+
+
+}
+
 
 
 
