--- a/style.css
+++ b/style.css
@@ -14,6 +14,27 @@ body {
     cursor: default;
 }
 
+/* splash screen */
+
+/*
+creating blank background with preloader gif
+*/
+#preloader {
+    background: #000 url(images/preloader-gif.gif) no-repeat center center;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 1005;
+}
+
+
+
+
+
+
+
+/* Nav section */
+
 li, a {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
