--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ creating blank background with preloader gif
     width: 100%;
     position: fixed;
     z-index: 1005;
+    transition: opacity 1s ease-out, visibility 1s ease-out;
+}
+
+#preloader.hidden {
+    opacity: 0;
+    visibility: hidden;
 }
 
 
