fixed position of pfp in hero section for both small and large devices, reduced splash screen runtime

--- a/media-queries.css
+++ b/media-queries.css
@@ -106,9 +106,10 @@ nav .fa-solid {
     #self-image-frame {
         position: relative;
         height: 200px;
-        margin: auto;
+        margin: 50 auto;
         display: block;
         top: 0;
+        left: 0;
         animation: spin-shadow 4s linear infinite; /* Apply the animation */
     }
 
