--- a/style.css
+++ b/style.css
@@ -19,24 +19,45 @@ body {
 /*
 creating blank background with preloader gif
 */
-#preloader {
-    background: #000 url(images/preloader-gif.gif) no-repeat center center;
-    height: 100vh;
-    width: 100%;
+.loader {
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f9f9f9;
+    transition: opacity 0.75s, visibility 0.75s;
     z-index: 1005;
-    transition: opacity 1s ease-out, visibility 1s ease-out;
 }
 
-#preloader.hidden {
+/* will be added dynamically using JS in order to make loader disappear off the screen */
+.loader-hidden {
     opacity: 0;
     visibility: hidden;
 }
 
+/* adding the spinner */
+.loader::after {
+    content: "";
+    position: absolute;
+    width: 75px;
+    height: 75px;
+    border: 15px solid #ece9e9;
+    border-top-color: rgb(237, 203, 115);
+    border-radius: 50%;
+    animation: loading 1.15s ease infinite;
+}
 
-
-
-
+@keyframes loading {
+    from {
+        transform: rotate(0turn);
+    } to {
+        transform: rotate(1turn);
+    }
+}
 
 
 /* Nav section */
