--- a/media-queries.css
+++ b/media-queries.css
@@ -167,6 +167,9 @@ nav .fa-solid {
 
 @media only screen and (min-width: 601px) and (max-width: 768px) {  
         /* hero section */
+        #hero-section {
+            background-color: red;
+        }
 
         .hero-section-intro p {
             font-size: 1.5rem;
@@ -269,18 +272,22 @@ nav .fa-solid {
     /* Hero section */
 
     #hero-section {
-        height: 92vh;
+        height: 88vh;
+        background-color: rgb(248, 177, 177);
+    }
+
+    .hero-section-intro {
+        background-color: rgb(246, 202, 246);
     }
 
     .self-intro {
         flex: 1.5;
-        margin-top: -5%;
+        margin-top: 5%;
     }
     
     .self-intro-content {
-        position: absolute;
-        right: 12px;
-        top: 210px;
+        right: 2rem;
+        top: 13.125rem;
     }
 
     .hero-section-intro p {
@@ -288,7 +295,7 @@ nav .fa-solid {
     }
 
     #self-image-frame {
-        margin-top: -17%;
+        margin-top: 9%;
     }
 
     #intro-name {
@@ -303,7 +310,7 @@ nav .fa-solid {
     /* About section */
 
     #about-section {
-        height: 125vh;  
+        height: 70vh;  
         padding-top: 0;
         margin-top: -0.8rem;
     }
