--- a/media-queries.css
+++ b/media-queries.css
@@ -308,17 +308,19 @@ nav .fa-solid {
     /* About section */
 
     #about-section {
-        height: 80vh;  
+        height: 80vh; 
         padding-top: 0;
     }
 
     .section-container {
         flex-direction: column;
         gap: 0;
-        margin-top: -2.95rem; 
+        margin-top: -2.95rem;
        }
 
-
+       .about-details-container {
+        height: 100%;
+       }
 
     .section-pic-container img {
         position: relative;
