--- a/style.css
+++ b/style.css
@@ -318,7 +318,9 @@ nav li a:hover::before {
 
 /* --------------- About section ----------------- */
 #about-section {
-    height: 100vh;
+    position: relative;
+    min-height: 100vh;
+    height: 100%;
     text-align: center;
     color: #000000;
     padding-top: 3px;    
