fixed responsiveness for 601px-768px

--- a/media-queries.css
+++ b/media-queries.css
@@ -241,28 +241,45 @@ nav .fa-solid {
     
         /* About section */
         #about-section {
-            height: 80vh;  
-            margin-top: 1.2rem;
+            background-color:rgb(170, 203, 204);
+            min-height: 75vh;
+            height: 100%;
+            margin-top: 10%;
+            padding-top: 0;
         }
     
         .section-container {
+            min-height: 75vh;
+            height: 100%;
             flex-direction: column;
             gap: 0;
-            margin-top: -2.95rem;
+            margin-top: 0;
         }
-    
-        .section-pic-container img {
+
+        .section-pic-container {
             position: relative;
+            min-height: 450px;
+            height: 100%;
+        }
+
+        .section-pic-container img {
+            position: absolute;
             margin: auto;
-            display: block;
-            height: 400px;
-            top: 0;
+            height: 500px;
+            top: -15%;
+            left: 0;
+        }
+
+        .about-details-container {
+            height: 100%;
+            min-height: 400px;
         }
     
         .about-container {
             margin-bottom: 2rem;
-            margin-top: 4rem;
+            margin-top: 7%;
         }
+
     
         .text-container p {
             padding-top: 2rem;
